[package]
name = "aquic"
version = "0.0.0"
edition = "2024"


[features]
quiche = ["dep:quiche"]
tokio-rt = ["tokio/rt"]
monoio-rt = ["dep:monoio"]
default = ["quiche", "tokio-rt"]


[dependencies]
# Note: we always use tokio sync & macros, but the tokio async runtime requires `tokio-rt` feature to be enabled.
tokio = { version = "1.49", features = ["sync", "macros"], default-features = false }
monoio = { version = "0.2", optional = true }

quiche = { version = "0.24", optional = true }

tracing = "0.1"
bytes = "1.11"


[build-dependencies]
cfg_aliases = "0.2"
