[package]
name = "aquic"
version = "0.0.0"
edition = "2024"


[features]
quiche = ["dep:quiche"]
quinn = ["dep:quinn-proto", "dep:rustls"]

tokio = ["dep:tokio", "dep:event-listener", "dep:crossfire", "dep:sharded-slab"]
monoio = ["dep:monoio", "dep:intrusive-collections"]

server-util = ["dep:bitvec", "dep:aes"]

default = []


[dependencies]
aquic-macros = { path = "../aquic-macros" }

tokio = { version = "1.50", features = ["rt", "time"], optional = true }
monoio = { version = "0.2", optional = true }

quiche = { version = "0.26", optional = true }
quinn-proto = { version = "0.11", optional = true }
rustls = { version = "0.23", optional = true }

# for `Send` async runtimes
event-listener = { version = "5.4", optional = true }
crossfire = { version = "3.1", optional = true }
sharded-slab = { version = "0.1", optional = true }

# for `!Send` async runtimes
intrusive-collections = { version = "0.10.0", optional = true }

# for `server-util` feature
bitvec = { version = "1.0", optional = true }
aes = { version = "0.8", features = ["zeroize"], optional = true }

rand = "0.10"
zeroize = "1.8"
subtle = "2.6"
aead = { version = "0.5", features = ["alloc"] }
digest = { version = "0.11", features = ["mac"]}
typenum = "1.19"

tracing = "0.1"
uuid = { version = "1.23", features = ["v4"] }
futures = "0.3"
bytes = "1.11"
slotmap = "1.1"
hashlink = "0.11"
foldhash = "0.2"
ahash = "0.8"
domain = "0.11"


[build-dependencies]
cfg_aliases = "0.2"


[lints]
workspace = true
