[package]
name = "aquic"
version = "0.0.0"
edition = "2024"


[features]
quiche = ["dep:quiche", "dep:mini-moka"]
quinn = ["dep:quinn-proto", "dep:rustls"]

async-send = ["dep:event-listener", "dep:crossfire", "dep:sharded-slab"]
server-util = ["dep:bitvec", "dep:aes"]

default = ["async-send"]


[dependencies]
aquic-macros = { path = "../aquic-macros" }

quiche = { version = "0.26", optional = true }
mini-moka = { version = "0.10", optional = true }

quinn-proto = { version = "0.11", optional = true }
rustls = { version = "0.23", optional = true }

# for `Send` async runtimes
event-listener = { version = "5.4", optional = true }
crossfire = { version = "3.1", optional = true }
sharded-slab = { version = "0.1", optional = true }

# for `!Send` async runtimes
intrusive-collections = "0.10.0"

# for `server-util` feature
bitvec = { version = "1.0", optional = true }
aes = { version = "0.8", features = ["zeroize"], optional = true }

rand = "0.10"
zeroize = "1.8"
subtle = "2.6"
aead = { version = "0.5", features = ["alloc"] }
digest = { version = "0.11", features = ["mac"]}
typenum = "1.19"

tracing = "0.1"
uuid = { version = "1.23", features = ["v4"] }
futures = "0.3"
bytes = "1.11"
slotmap = "1.1"
hashlink = "0.11"
foldhash = "0.2"
ahash = "0.8"
domain = "0.11"


[lints]
workspace = true
